--- a/home.html
+++ b/home.html
@@ -232,6 +232,7 @@ const typingIndicators = {}
 
 function showTyping(peerId) {
   if (typingIndicators[peerId]) return;
+
   const d = document.createElement('div');
   d.className = 'typing-indicator';
   d.innerHTML = `
@@ -242,23 +243,26 @@ function showTyping(peerId) {
   messagesEl.appendChild(d);
   typingIndicators[peerId] = d;
 
-  requestAnimationFrame(scrollBottom);
+  requestAnimationFrame(() => {
+    messagesEl.scrollTo({
+      top: messagesEl.scrollHeight,
+      behavior: 'smooth'
+    });
+  });
 }
 
+
 function hideTyping(peerId) {
-  const el = typingIndicators[peerId];
+  const el = typingIndicators[peerId]
   if (el) {
-    el.style.opacity = 0;
-    el.style.transform = "translateY(6px)";
-    setTimeout(() => {
-      el.remove();
-      delete typingIndicators[peerId];
-      scrollBottom();
-    }, 250);
+    el.style.opacity = 0
+    el.style.transform = "translateY(6px)"
+    setTimeout(() => el.remove(), 250)
+    delete typingIndicators[peerId]
   }
 }
 
-
+// ---- UI: Contacts ----
 function renderContacts(filter = '') {
   contactsEl.innerHTML = ''
   const sorted = Object.values(chatStore)
@@ -304,6 +308,7 @@ function openChat(peerId) {
   scrollBottom()
 }
 
+// ---- Messages ----
 function renderMessage(text, me, isImage, animate = true) {
   const d = document.createElement('div')
   d.className = 'msg ' + (me ? 'me' : 'other')
@@ -317,9 +322,11 @@ function renderMessage(text, me, isImage, animate = true) {
   scrollBottom()
 }
 function scrollBottom() {
-  messagesEl.scrollTo({
-    top: messagesEl.scrollHeight,
-    behavior: 'smooth'
+  requestAnimationFrame(() => {
+    messagesEl.scrollTo({
+      top: messagesEl.scrollHeight,
+      behavior: 'smooth'
+    });
   });
 }
 
@@ -376,6 +383,7 @@ async function resizeAndCompress(file, maxWidth, maxHeight, initialQuality = 0.3
     img.onload = () => {
       let { width, height } = img;
 
+      // maintain aspect ratio
       const scale = Math.min(maxWidth / width, maxHeight / height, 1);
       width = width * scale;
       height = height * scale;
@@ -390,6 +398,7 @@ async function resizeAndCompress(file, maxWidth, maxHeight, initialQuality = 0.3
       let compressed = canvas.toDataURL('image/jpeg', quality);
       let sizeKB = Math.round((compressed.length * 3 / 4) / 1024);
 
+      // reduce quality in small steps until < targetKB
       while (sizeKB > targetKB && quality > 0.05) {
         quality -= 0.05;
         compressed = canvas.toDataURL('image/jpeg', quality);
@@ -420,6 +429,8 @@ function sendImageMessage(dataUrl) {
   saveToDrive()
   renderContacts()
 }
+
+// ---- Supabase Presence & Signaling ----
 async function startRealtime() {
   const presence = supabase.channel('presence')
   const signaling = supabase.channel('signaling')
@@ -473,6 +484,7 @@ function sendSignal(to, msg) {
   })
 }
 
+// ---- WebRTC ----
 function createConnection(peer) {
   const pc = new RTCPeerConnection()
   const dc = pc.createDataChannel('chat')
@@ -515,6 +527,7 @@ async function handleCandidate(from, candidate) {
   await pcMap[from]?.addIceCandidate(new RTCIceCandidate(candidate))
 }
 
+// ---- Drive Persistence ----
 async function fetchDriveData() {
   try {
     const listRes = await fetch(`https://www.googleapis.com/drive/v3/files?q=name='${DRIVE_FILE_NAME}' and trashed=false&fields=files(id,name)`, {
@@ -548,11 +561,13 @@ async function saveToDrive() {
 }
 function logout() { localStorage.removeItem(STORAGE_KEY); location.href = 'register.html' }
 
+// ---- Status Updates ----
 function updatePeerStatus(id) {
   peerStatusEl.textContent = online[id] ? 'Online' :
     chatStore[id]?.lastSeen ? 'Last seen ' + new Date(chatStore[id].lastSeen).toLocaleTimeString() : 'Offline'
 }
 
+// ---- Init ----
 searchEl.oninput = () => renderContacts(searchEl.value.trim())
 addBtn.onclick = () => {
   const id = searchEl.value.trim()
@@ -582,5 +597,3 @@ startRealtime()
 </script> 
 </body>
 </html>
-
-
